tests/baselines/reference/methodSignaturesWithOverloads.errors.txt
==== tests/cases/compiler/methodSignaturesWithOverloads.ts (4 errors) ====
    // Object type literals permit overloads with optionality but they must match
    
    var c: {
        func4?(x: number): number;
        func4(s: string): string; // error, mismatched optionality
        ~~~~~~~~~~~~~~~~~~~~~~~~
!!! methodSignaturesWithOverloads.ts(5,5): error TS2153: Overload signatures must all be optional or required.
        func5?: {
            (x: number): number;
            (s: string): string;
        };
    };
    
    var c2: {
        func4<T>(x: T): number;
        func4? <T>(s: T): string; // error, mismatched optionality
        ~~~~~~~~~~~~~~~~~~~~~~~~
!!! methodSignaturesWithOverloads.ts(14,5): error TS2153: Overload signatures must all be optional or required.
        ~~~~~~~~~~~~~~~~~~~~~~~~
!!! methodSignaturesWithOverloads.ts(14,5): error TS2175: Overloads cannot differ only by return type.
        func5?: {
            <T>(x: T): number;
            <T>(s: T): string;
            ~~~~~~~~~~~~~~~~~
!!! methodSignaturesWithOverloads.ts(17,9): error TS2175: Overloads cannot differ only by return type.
        };
    };